<resources>
    <string name="app_name">Burned Calories Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="WeightLabel">Weight</string>
    <string name="weighET">000</string>
    <string name="MilesRanLabel">Miles Ran</string>
    <string name="Miles">1</string>
    <string name="CalBurnedLabel">Calories Burned</string>
    <string name="Calories">00.0</string>
    <string name="Height">Height</string>
    <string name="BMILabel">BMI</string>
    <string name="bmi">00</string>
    <string name="nameLabel">Name</string>

    <string-array name="feet">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="inches">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
    </string-array>
</resources>
